--- a/auth-service/src/main/resources/application_errors_en.properties
+++ b/auth-service/src/main/resources/application_errors_en.properties
@@ -23,6 +23,7 @@ error.date.after.current=The field {0} should be after current date
 error.datea.after.dateb=The field {0} should be after {1}
 error.integer.comma.seperated=The field {0} should contain one or more integers comma seperated
 
+error.generic.prefix=The field
 error.generic.required=is required
 error.generic.invalid=is invalid
 error.generic.oversize=exceeds size limit
