--- a/auth-service/src/main/resources/application_messages_en.properties
+++ b/auth-service/src/main/resources/application_messages_en.properties
@@ -6,7 +6,9 @@ prompt.404=The page you requested does not exist.
 prompt.500=A Server error has occurred
 
 #validation messages
-
+prompt.user.name= User Name
+prompt.user.email= User Email
+prompt.user.password= User Password
 
 
 #contact messages
