Implementing Login functionality

--- a/frontent/src/assets/i18n/en.json
+++ b/frontent/src/assets/i18n/en.json
@@ -127,6 +127,7 @@
     "title": "Login",
     "LABELS": {
       "username": "Username",
+      "email": "Email",
       "password": "Password",
       "agreement-header": "Terms of User Agreement"
     },
