--- a/frontent/src/assets/i18n/gr.json
+++ b/frontent/src/assets/i18n/gr.json
@@ -124,6 +124,7 @@
     "title": "Σύνδεση",
     "LABELS": {
       "username": "Όνομα χρήστη",
+      "email": "Email",
       "password": "Κώδικας Πρόσβασης",
       "agreement-header": "Όροι Συμφωνίας Χρήστη"
     },
