--- a/frontent/src/assets/i18n/gr.json
+++ b/frontent/src/assets/i18n/gr.json
@@ -98,20 +98,6 @@
       "searching": "Αναζήτηση..."
     }
   },
-  "HEADER":{
-    "SEARCH":{
-      "title":"Αναζήτηση",
-      "anywhere":"Οπουδήποτε",
-      "any-week":"Οποιαδήποτε εβδομάδα",
-      "add-guests":"Προσθήκη προσκεκλημένων"
-    },
-    "MENU": {
-      "my-properties": "Τα ακίνητά μου",
-      "my-reservation": "Η κράτησή μου",
-      "my-booking":"Η κράτησή μου",
-      "log-out":"Αποσύνδεση"
-    }
-  },
   "FOOTER":{
     "LABELS":{
       "terms":"Οροι",
@@ -159,31 +145,16 @@
       "register": "Εγγραφή"
     }
   },
-  "SEARCH":{
-    "location":"Πού θέλετε να πάτε;",
-    "date":"Πότε θέλετε να πάτε;",
-    "guests":"Τι ψάχνετε;",
-    "guests-info":"Αριθμός κλινών, καλεσμένων κ.λπ."
-  },
-  "LANDLORD":{
-    "CREATE-PROPERTY":{
-      "CATEGORY":{
-        "title":"Ποιο από αυτά περιγράφει καλύτερα τον τόπο σας;"
-      },
-      "DESCRIPTION":{
-        "title":"Τώρα, ας δώσουμε στο σπίτι σας έναν τίτλο και μια περιγραφή",
-        "info":"Οι σύντομοι τίτλοι λειτουργούν καλύτερα."
-      },
-      "INFO":{
-        "guests":"Καλεσμένοι",
-        "bedrooms":"Υπνοδωμάτια",
-        "beds":"Κρεβάτια",
-        "bathrooms":"Μπάνια"
+  "USER":{
+    "SEARCH":{
+      "title": "Αναζήτηση χρηστών",
+      "LABELS": {
+        "username": "Όνομα χρήστη",
+        "email": "Email",
+        "name": "Ονομα/Επώνυμο",
+        "status": "Κατάσταση χρήστη",
+        "role": "Ρόλος"
       }
-    },
-    "PLACEHOLDERS":{
-      "title":"Τίτλος",
-      "summary":"Περίληψη"
     }
   }
 }
