Implementing Search users form

--- a/frontent/src/assets/i18n/en.json
+++ b/frontent/src/assets/i18n/en.json
@@ -101,6 +101,10 @@
       "searching": "Searching..."
     }
   },
+  "REQUIRED-FIELDS-LABEL": {
+    "part1": "All fields marked with an asterisk",
+    "part2": "are mandatory"
+  },
   "FOOTER":{
     "LABELS":{
       "terms":"Terms",
