--- a/frontent/src/assets/i18n/gr.json
+++ b/frontent/src/assets/i18n/gr.json
@@ -98,6 +98,10 @@
       "searching": "Αναζήτηση..."
     }
   },
+  "REQUIRED-FIELDS-LABEL": {
+    "part1": "Όλα τα πεδία που σημειώνονται με αστερίσκο",
+    "part2": "είναι υποχρεωτικά"
+  },
   "FOOTER":{
     "LABELS":{
       "terms":"Οροι",
