--- a/frontent/src/assets/i18n/gr.json
+++ b/frontent/src/assets/i18n/gr.json
@@ -160,5 +160,21 @@
         "role": "Ρόλος"
       }
     }
+  },
+  "SAVED-SEARCHES": {
+    "title": "Saved Searches",
+    "CONFIRM-DIALOG": {
+      "header": "Delete Saved Search",
+      "message": "Do you really want to delete this saved search?"
+    },
+    "MESSAGES": {
+      "summary": "Save Search",
+      "detail-success": "Search was saved successfully"
+    },
+    "LABELS": {
+      "load-saved-search-placeholder": "Select a saved search",
+      "enter-title-first": "Enter a title first",
+      "with-title": "with title"
+    }
   }
 }
