Adding translate advice

--- a/auth-service/src/main/resources/application_messages_en.properties
+++ b/auth-service/src/main/resources/application_messages_en.properties
@@ -17,3 +17,14 @@ error.send.email=Email could not been sent
 succsess.send.feedback=Feedback was sent successfully
 success.send.manual.notification=Manual notification was sent successfully
 error.send.manual.notification=Manual notification could not been sent
+
+#User roles
+user.role.sa=System Admin
+user.role.doctor=Doctor
+user.role.patient=Patient
+user.no.role=Guest user
+
+#User account status
+account.active=Active
+account.inactive=Inactive
+account.deleted=Deleted
