Search users form

--- a/frontent/src/assets/i18n/en.json
+++ b/frontent/src/assets/i18n/en.json
@@ -105,6 +105,9 @@
     "part1": "All fields marked with an asterisk",
     "part2": "are mandatory"
   },
+  "SCREEN-LOADER": {
+    "loading": "loading"
+  },
   "FOOTER":{
     "LABELS":{
       "terms":"Terms",
