--- a/frontent/src/assets/i18n/gr.json
+++ b/frontent/src/assets/i18n/gr.json
@@ -113,6 +113,11 @@
       "privacy-choices":"Η επιλογή απορρήτου σας"
     }
   },
+  "SEARCH": {
+    "ERRORS": {
+      "search-failed": "Αποτυχια Αναζητησης"
+    }
+  },
   "LOGIN": {
     "title": "Σύνδεση",
     "LABELS": {
