Search users form

--- a/frontent/src/assets/i18n/en.json
+++ b/frontent/src/assets/i18n/en.json
@@ -117,6 +117,10 @@
     }
   },
   "SEARCH": {
+    "COMMON": {
+      "search-criteria": "Search Criteria",
+      "search-results": "Search Results"
+    },
     "ERRORS": {
       "search-failed": "Search failed"
     }
