--- a/frontent/src/assets/i18n/gr.json
+++ b/frontent/src/assets/i18n/gr.json
@@ -170,6 +170,15 @@
         "name": "Ονομα/Επώνυμο",
         "status": "Κατάσταση χρήστη",
         "role": "Ρόλος"
+      },
+      "RESULTS-TABLE": {
+        "COLS": {
+          "username": "Όνομα χρήστη",
+          "firstName": "Ονομα",
+          "lastName": "Επώνυμο",
+          "email": "Email",
+          "status": "Κατάσταση χρήστη"
+        }
       }
     }
   },
