Search users form

--- a/frontent/src/assets/i18n/en.json
+++ b/frontent/src/assets/i18n/en.json
@@ -54,7 +54,8 @@
       }
     },
     "TABLES": {
-      "no-results": "No results found"
+      "no-results": "No results found",
+      "result-summary": "Result Summary"
     },
     "TOOLTIPS": {
       "no-image-found": "No image found",
