--- a/frontent/src/assets/i18n/gr.json
+++ b/frontent/src/assets/i18n/gr.json
@@ -53,7 +53,8 @@
       }
     },
     "TABLES": {
-      "no-results": "Δεν βρέθηκαν αποτελέσματα"
+      "no-results": "Δεν βρέθηκαν αποτελέσματα",
+      "result-summary": "Σύνοψη Αποτελεσμάτων"
     },
     "TOOLTIPS": {
       "no-image-found": "Δεν βρέθηκε εικόνα",
