Search users form

--- a/frontent/src/assets/i18n/en.json
+++ b/frontent/src/assets/i18n/en.json
@@ -166,6 +166,11 @@
     }
   },
   "USER":{
+    "STATUSES":{
+      "active": "Active",
+      "inactive": "Inactive",
+      "deleted": "Deleted"
+    },
     "SEARCH":{
       "title": "Search Users",
       "LABELS": {
