--- a/frontent/src/assets/i18n/gr.json
+++ b/frontent/src/assets/i18n/gr.json
@@ -163,6 +163,11 @@
     }
   },
   "USER":{
+    "STATUSES":{
+      "active": "Ενεργός",
+      "inactive": "Ανενεργός",
+      "deleted": "Διαγραμμένος"
+    },
     "SEARCH":{
       "title": "Αναζήτηση χρηστών",
       "LABELS": {
