Creating User details component

--- a/frontent/src/assets/i18n/en.json
+++ b/frontent/src/assets/i18n/en.json
@@ -189,6 +189,9 @@
           "status": "Status"
         }
       }
+    },
+    "DETAILS": {
+      "title": "User Details"
     }
   },
   "SAVED-SEARCHES": {
