--- a/frontent/src/assets/i18n/gr.json
+++ b/frontent/src/assets/i18n/gr.json
@@ -186,6 +186,9 @@
           "status": "Κατάσταση χρήστη"
         }
       }
+    },
+    "DETAILS": {
+      "title": "Στοιχεία χρήστη"
     }
   },
   "SAVED-SEARCHES": {
