--- a/frontent/src/assets/i18n/en.json
+++ b/frontent/src/assets/i18n/en.json
@@ -163,6 +163,14 @@
     },
     "BUTTONS": {
       "register": "Register"
+    },
+    "MESSAGES": {
+      "SUCCESS": {
+        "user-register-success": "User Successfully Registered"
+      },
+      "ERROR": {
+        "user-register-failure": "Failed to register user"
+      }
     }
   },
   "USER":{
@@ -199,6 +207,20 @@
         "lastName": "Last name",
         "status": "Status",
         "role": "Role"
+      }
+    },
+    "MESSAGES": {
+      "SUCCESS": {
+        "user-edit-success": "User Successfully Updated",
+        "user-delete-success": "User Successfully Deleted",
+        "user-activate-success": "User Successfully Activated",
+        "user-deactivate-success": "User Successfully Deactivated"
+      },
+      "ERROR": {
+        "user-edit-failure": "Failed to update user",
+        "user-delete-failure": "Failed to delete user",
+        "user-activate-failure": "Failed to activate user",
+        "user-deactivate-failure": "Failed to deactivate user"
       }
     }
   },
