Changing password functionality

--- a/auth-service/src/main/resources/application_errors_en.properties
+++ b/auth-service/src/main/resources/application_errors_en.properties
@@ -44,3 +44,7 @@ error.user.not.verified="User not verified
 error.user.not.active=User not active"
 error.invalid.password= Invalid password
 
+error.password.required=Password is required
+error.password.confirm.required=Confirm Password is required
+error.password.confirm= Passwords must match
+
