Changing password functionality

--- a/auth-service/src/main/resources/application_errors_en.properties
+++ b/auth-service/src/main/resources/application_errors_en.properties
@@ -33,15 +33,9 @@ error.generic.ge=must be greater than or equal to {value}
 error.user.already.active=User's status is already Active
 error.user.already.inactive=User's status is already Inactive
 
-error.landlord.not.found=Landlord public id not found
-
-error.booking.exists=One booking already exists
-error.booking.not.found=Booking not found
-
-error.listing.not.found=Lisitng not found
 error.user.not.found=User not found
-error.user.not.verified="User not verified
-error.user.not.active=User not active"
+error.user.not.verified=User not verified
+error.user.not.active=User not active
 error.invalid.password= Invalid password
 
 error.password.required=Password is required
