--- a/auth-service/src/main/resources/application_messages_en.properties
+++ b/auth-service/src/main/resources/application_messages_en.properties
@@ -6,9 +6,13 @@ prompt.404=The page you requested does not exist.
 prompt.500=A Server error has occurred
 
 #validation messages
-prompt.user.name= User Name
+prompt.user.name= Username
 prompt.user.email= User Email
 prompt.user.password= User Password
+prompt.user.confirm.password= User Confirm Password
+prompt.user.lastName= User Last Name
+prompt.user.firstName= User First Name
+prompt.user.role= User Role
 
 
 #contact messages
