Changing password functionality

--- a/frontent/src/assets/i18n/en.json
+++ b/frontent/src/assets/i18n/en.json
@@ -206,7 +206,10 @@
         "firstName": "First name",
         "lastName": "Last name",
         "status": "Status",
-        "role": "Role"
+        "role": "Role",
+        "details": "Details",
+        "change-password": "Change Password",
+        "account-status": "Account Status"
       }
     },
     "MESSAGES": {
