Changing password functionality

--- a/frontent/src/assets/i18n/en.json
+++ b/frontent/src/assets/i18n/en.json
@@ -207,6 +207,8 @@
         "lastName": "Last name",
         "status": "Status",
         "role": "Role",
+        "password": "Password",
+        "confirm-password": "Confirm Password",
         "details": "Details",
         "change-password": "Change Password",
         "account-status": "Account Status"
