--- a/frontent/src/assets/i18n/gr.json
+++ b/frontent/src/assets/i18n/gr.json
@@ -204,6 +204,8 @@
         "lastName": "Επώνυμο",
         "status": "Κατάσταση χρήστη",
         "role": "Ρόλος",
+        "password": "Κώδικας Πρόσβασης",
+        "confirm-password": "Επαλήθευση Κωδικού Πρόσβασης",
         "details": "Λεπτομερειες",
         "change-password": "Αλλαγή κωδικού πρόσβασης",
         "account-status": "Κατάσταση λογαριασμού"
