Registering user functionality

--- a/frontent/src/assets/i18n/en.json
+++ b/frontent/src/assets/i18n/en.json
@@ -163,7 +163,9 @@
       "enter-last-name": "Enter your Last Name"
     },
     "BUTTONS": {
-      "register": "Register"
+      "register": "Register",
+      "create-account": "Create Account",
+      "already-have-account": "Already have an account"
     },
     "MESSAGES": {
       "SUCCESS": {
