--- a/frontent/src/assets/i18n/gr.json
+++ b/frontent/src/assets/i18n/gr.json
@@ -160,7 +160,9 @@
       "enter-last-name": "Εισαγάγετε το Επώνυμό σας"
     },
     "BUTTONS": {
-      "register": "Εγγραφή"
+      "register": "Εγγραφή",
+      "create-account": "Δημιουργία λογαριασμού",
+      "already-have-account": "Έχετε ήδη λογαριασμό"
     },
     "MESSAGES": {
       "SUCCESS": {
