Registering user functionality

--- a/auth-service/src/main/resources/application_errors_en.properties
+++ b/auth-service/src/main/resources/application_errors_en.properties
@@ -42,3 +42,6 @@ error.password.required=Password is required
 error.password.confirm.required=Confirm Password is required
 error.password.confirm= Passwords must match
 
+error.email.exists=The email already exists
+error.username.exists=The username already exists
+
