Changing account status

--- a/frontent/src/assets/i18n/en.json
+++ b/frontent/src/assets/i18n/en.json
@@ -216,6 +216,7 @@
         "change-password": "Change Password",
         "account-status": "Account Status",
         "manage-account-status": "Manage Account Status",
+        "account-actions": "Account Actions",
         "activate": "Activate",
         "deactivate": "Deactivate",
         "delete": "Delete"
