--- a/auth-service/src/main/resources/application_errors_en.properties
+++ b/auth-service/src/main/resources/application_errors_en.properties
@@ -45,3 +45,5 @@ error.password.confirm= Passwords must match
 error.email.exists=The email already exists
 error.username.exists=The username already exists
 
+error.translation.resource-id.required= Resource id is required
+error.translation.language-id.required= Language id is required
