--- a/auth-service/src/main/resources/application_ui_labels_en.properties
+++ b/auth-service/src/main/resources/application_ui_labels_en.properties
@@ -72,6 +72,9 @@ GLOBAL.LABELS.loading-data-wait=Loading data, please wait
 GLOBAL.LABELS.remove-item-from-list=Click to remove {itemType}
 GLOBAL.LABELS.add-at-least-one-xx-in-list=Add at least one {itemType}
 GLOBAL.LABELS.searching=Searching...
+SIDE.MENU.ADMINISTRATION.dashboard=Dashboard
+SIDE.MENU.ADMINISTRATION.users=Users
+SIDE.MENU.ADMINISTRATION.i18n-management=Manage Resource Bundle
 REQUIRED-FIELDS-LABEL.part1=All fields marked with an asterisk
 REQUIRED-FIELDS-LABEL.part2=are mandatory
 SCREEN-LOADER.loading=loading
@@ -165,4 +168,14 @@ SAVED-SEARCHES.MESSAGES.summary=Save Search
 SAVED-SEARCHES.MESSAGES.detail-success=Search was saved successfully
 SAVED-SEARCHES.LABELS.load-saved-search-placeholder=Select a saved search
 SAVED-SEARCHES.LABELS.enter-title-first=Enter a title first
-SAVED-SEARCHES.LABELS.with-title=with title
+ADMINISTRATION.I18N-MANAGEMENT.search-resources=Search Resources
+ADMINISTRATION.I18N-MANAGEMENT.TABLE.resource-key=Resource Key
+ADMINISTRATION.I18N-MANAGEMENT.TABLE.resource-value=Resource Value
+ADMINISTRATION.I18N-MANAGEMENT.TABLE.action=Action
+ADMINISTRATION.I18N-MANAGEMENT.search-module=Module Name
+ADMINISTRATION.I18N-MANAGEMENT.search-language=Language
+ADMINISTRATION.I18N-MANAGEMENT.search-term=Term
+ADMINISTRATION.I18N-MANAGEMENT.MESSAGES.SUCCESS.update-success=Succesfully Updated bundles.
+ADMINISTRATION.I18N-MANAGEMENT.MESSAGES.ERROR.update-failure=Failed to update bundles.
+ADMINISTRATION.I18N-MANAGEMENT.MESSAGES.ERROR.get-modules=Failed to get resource modules.
+ADMINISTRATION.I18N-MANAGEMENT.MESSAGES.ERROR.get-languages=Failed to get resource languanges.
