Refactoring register component to use signal forms

--- a/auth-service/src/main/resources/application_ui_labels_en.properties
+++ b/auth-service/src/main/resources/application_ui_labels_en.properties
@@ -114,6 +114,14 @@ REGISTER.BUTTONS.create-account=Create Account
 REGISTER.BUTTONS.already-have-account=Already have an account
 REGISTER.MESSAGES.SUCCESS.user-register-success=User Successfully Registered
 REGISTER.MESSAGES.ERROR.user-register-failure=Failed to register user
+REGISTER.MESSAGES.ERROR.email-required=Email is required
+REGISTER.MESSAGES.ERROR.username-required=Username is required
+REGISTER.MESSAGES.ERROR.firstName-required=First Name is required
+REGISTER.MESSAGES.ERROR.lastName-required=Last Name is required
+REGISTER.MESSAGES.ERROR.role-required=Role is required
+REGISTER.MESSAGES.ERROR.password-required=Password is required
+REGISTER.MESSAGES.ERROR.confirmPassword-required=Confirm password is required
+REGISTER.MESSAGES.ERROR.passwordMismatch=Confirmation password needs to be the same as password
 USER.STATUSES.active=Active
 USER.STATUSES.inactive=Inactive
 USER.STATUSES.deleted=Deleted
