--- a/auth-service/src/main/resources/application_ui_labels_gr.properties
+++ b/auth-service/src/main/resources/application_ui_labels_gr.properties
@@ -111,6 +111,14 @@ REGISTER.BUTTONS.create-account=Δημιουργία λογαριασμού
 REGISTER.BUTTONS.already-have-account=Έχετε ήδη λογαριασμό
 REGISTER.MESSAGES.SUCCESS.user-register-success=Ο χρήστης εγγράφηκε με επιτυχία
 REGISTER.MESSAGES.ERROR.user-register-failure=Αποτυχία εγγραφής χρήστη
+REGISTER.MESSAGES.ERROR.email-required=Το email είναι υποχρεωτικό
+REGISTER.MESSAGES.ERROR.username-required=Το όνομα χρήστη είναι υποχρεωτικό
+REGISTER.MESSAGES.ERROR.firstName-required=Το ονομα είναι υποχρεωτικό
+REGISTER.MESSAGES.ERROR.lastName-required=Το επώνυμο είναι υποχρεωτικό
+REGISTER.MESSAGES.ERROR.role-required=Ο ρόλος χρήστη είναι υποχρεωτικός
+REGISTER.MESSAGES.ERROR.password-required=Ο κωδικός πρόσβασης είναι υποχρεωτικός
+REGISTER.MESSAGES.ERROR.confirmPassword-required=Η επιβεβαίωση κωδικού πρόσβασης είναι υποχρεωτική
+REGISTER.MESSAGES.ERROR.passwordMismatch=Ο κωδικός επιβεβαίωσης πρέπει να είναι ίδιος με τον κωδικό πρόσβασης
 USER.STATUSES.active=Ενεργός
 USER.STATUSES.inactive=Ανενεργός
 USER.STATUSES.deleted=Διαγραμμένος
